--- a/portfolio.css
+++ b/portfolio.css
@@ -281,13 +281,11 @@ nav a:hover {
 }
 
 .portrait {
-    background: linear-gradient(135deg, #2391a4, #0a6674);
-    /* gradient effect */
-    width: 23rem;
-    height: 25rem;
-    margin-top: 2rem;
-    margin-right: 10rem;
-    border-radius: 1.5rem;
+    width: 100%;
+    max-width: 350px;
+    height: auto;
+    margin: 2rem auto;
+    border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
     display: flex;
@@ -305,8 +303,9 @@ nav a:hover {
 
 .portrait img {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
+    display: block;
     border-radius: 1.5rem;
     transition: transform 0.5s ease;
 }
@@ -484,17 +483,18 @@ img {
 .project-card {
     display: flex;
     grid-template-columns: 1fr 1fr;
-    gap: 3rem;
+    gap: 2rem;
     background-color: var(--card-bg);
     border-radius: var(--radius);
     overflow: hidden;
     box-shadow: var(--shadow);
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
 }
 
 
 .project-content {
     padding: 2rem;
+    flex: 2;
 
 }
 
@@ -523,16 +523,28 @@ img {
 }
 
 .project-image {
-    height: 100%;
-    min-height: 300px;
+    flex: 1;
+  min-width: 250px;
+  height: 200px;
+  background-color: #1d1c1c;
+  border-radius: 1rem;
+  overflow: hidden;   
+  display: flex;
+  justify-content: center;
+  align-items: center;
     
 }
 
 .project-image .image-placeholder {
     height: 100%;
-    border-radius: 0;
+    width: 100%;
+    object-fit: cover;
     
+    
+ 
 }
+
+
 
 /* Contact Section */
 .contact {
@@ -648,6 +660,20 @@ footer {
     animation-delay: 0.6s;
 } */
 
+/* Default hide hamburger */
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  gap: 5px;
+}
+
+.hamburger span {
+  width: 25px;
+  height: 3px;
+  background: var(--text-color);
+  border-radius: 3px;
+}
 /* Responsive Styles */
 @media (max-width: 992px) {
 
@@ -704,4 +730,41 @@ footer {
         width: 100%;
         margin-bottom: 0.5rem;
     }
+.project-card {
+    flex-direction: column;
+    text-align: center;
+  }
+ .project-image {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 1rem;
+  }
+  .project-content {
+    width: 100%;
+  }
 }
+
+/* Mobile view */
+@media (max-width: 768px) {
+  .nav-links {
+    display: none; /* default hidden */
+    flex-direction: column;
+    gap: 1rem;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    background: var(--bg-color);
+    padding: 1rem;
+    box-shadow: var(--shadow);
+  }
+
+  .nav-links.active {
+    display: flex; /* toggle hoke dikhega */
+  }
+
+  .hamburger {
+    display: flex;
+  }
+}
+
